feat: added CRUD for all