@@ -9,36 +9,34 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import com.tinysteps.tinysteps.model.AgeGroupModel;
 import com.tinysteps.tinysteps.model.CategoryModel;
 import com.tinysteps.tinysteps.model.QuestionModel;
+import com.tinysteps.tinysteps.repository.AgeGroupRepository;
 import com.tinysteps.tinysteps.repository.CategoryRepository;
 import com.tinysteps.tinysteps.repository.QuestionRepository;
-
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 @Service
 public class QuestionService {
 
     private final QuestionRepository questionRepository;
     private final CategoryRepository categoryRepository;
-
-    public QuestionService(QuestionRepository questionRepository, CategoryRepository categoryRepository) {
+    private final AgeGroupRepository ageGroupRepository;
+    private static final Logger log = LoggerFactory.getLogger(QuestionService.class);
+    public QuestionService(QuestionRepository questionRepository,
+                           CategoryRepository categoryRepository,
+                           AgeGroupRepository ageGroupRepository) {
         this.questionRepository = questionRepository;
         this.categoryRepository = categoryRepository;
+        this.ageGroupRepository = ageGroupRepository;
     }
 
     public ResponseEntity<String> addQuestion(QuestionModel question) {
         boolean questionExist = questionRepository.findByQuestionEnglish(question.getQuestionEnglish()).isPresent();
-        boolean categoryExist = !questionRepository.findByCategoryId(question.getCategory().getId()).isEmpty();
-        boolean ageGroupExist = !questionRepository.findByAgeGroupId(question.getAgeGroup().getId()).isEmpty();
-
         if (questionExist) {
             return ResponseEntity.status(HttpStatus.CONFLICT).body("Question already exists");
         }
-        // if (!categoryExist) {
-        //     return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Invalid category");
-        // }
-        // if (!ageGroupExist) {
-        //     return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Invalid age group");
-        // }
 
         questionRepository.save(question);
         return ResponseEntity.status(HttpStatus.CREATED).body("Question added successfully!");
@@ -51,28 +49,73 @@ public class QuestionService {
 
     public ResponseEntity<Map<String, Object>> deleteQuestion(Long id) {
         Optional<QuestionModel> existingQuestion = questionRepository.findById(id);
-        if (!existingQuestion.isPresent()) {
+        if (existingQuestion.isEmpty()) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body(Map.of("message", "No question found", "data", Collections.emptyMap()));
-
         }
 
         questionRepository.deleteById(id);
-        return ResponseEntity.status(HttpStatus.OK)
-                    .body(Map.of("message", "Question deleted succesfully", "data", Collections.emptyMap()));
+        return ResponseEntity.ok(Map.of("message", "Question deleted successfully", "data", Collections.emptyMap()));
     }
 
     public ResponseEntity<Map<String, Object>> getQuestionByCategory(Long categoryId) {
         Optional<CategoryModel> existingCategory = categoryRepository.findById(categoryId);
-
-        if (!existingCategory.isPresent()) {
+        if (existingCategory.isEmpty()) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body(Map.of("message", "No category found", "data", Collections.emptyMap()));
-
         }
 
         List<QuestionModel> questions = questionRepository.findByCategoryId(categoryId);
-        return ResponseEntity.status(HttpStatus.OK)
-                    .body(Map.of("message", "Question fetched succesfully", "data", questions));
+        return ResponseEntity.ok(Map.of("message", "Questions fetched successfully", "data", questions));
+    }
+
+    public ResponseEntity<Map<String, Object>> getQuestionById(Long id) {
+        Optional<QuestionModel> question = questionRepository.findById(id);
+        if (question.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(Map.of("message", "Question not found", "data", Collections.emptyMap()));
+        }
+
+        return ResponseEntity.ok(Map.of("message", "Question fetched", "data", question.get()));
+    }
+
+    public ResponseEntity<Map<String, Object>> updateQuestion(Long id, QuestionModel questionModel) {
+
+        Optional<QuestionModel> responseOpt = questionRepository.findById(id);
+        if (responseOpt.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(Map.of("message", "Question not found", "data", Collections.emptyMap()));
+        }
+
+        QuestionModel existing = responseOpt.get();
+
+        if (questionModel.getQuestionEnglish() != null) {
+            existing.setQuestionEnglish(questionModel.getQuestionEnglish());
+        }
+        if (questionModel.getQuestionMalayalam() != null) {
+            existing.setQuestionMalayalam(questionModel.getQuestionMalayalam());
+        }
+        if (questionModel.getSeverity() != null) {
+            existing.setSeverity(questionModel.getSeverity());
+        }
+
+        if (questionModel.getCategory() != null && questionModel.getCategory().getId() != null &&
+            questionModel.getAgeGroup() != null && questionModel.getAgeGroup().getId() != null) {
+
+            Optional<CategoryModel> categoryResp = categoryRepository.findById(questionModel.getCategory().getId());
+            Optional<AgeGroupModel> ageGroupResp = ageGroupRepository.findById(questionModel.getAgeGroup().getId());
+
+            if (categoryResp.isEmpty() || ageGroupResp.isEmpty()) {
+                return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                        .body(Map.of("message", "Invalid category or age group ID", "data", Collections.emptyMap()));
+            }
+
+            existing.setCategory(categoryResp.get());
+            existing.setAgeGroup(ageGroupResp.get());
+        }
+
+        questionRepository.save(existing);
+
+        return ResponseEntity.ok(Map.of("message", "Question updated successfully", "data", existing));
     }
 }
